[metadata]
name = ronald_utils
version = 0.0.1

[options]
packages = find:
package_dir =
    = src
install_requires =
    pandas
    tabulate

[options.entry_points]
console_scripts =
    merge_files = ronald.file_tools.merge_files:main
    merge_folder_files = ronald.file_tools.merge_files:merge_folder